gcc/testsuite/rust/rustc/ui/const-generics/min_const_generics/default_function_param_dg.rs
#![crate_type = "lib"]

fn foo<const SIZE: usize = 5usize>() {}
// { dg-error "" "" { target *-*-* } .-1 }

